--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework = "^3.14.0"
 python-decouple = "^3.7"
 psycopg2-binary = "^2.9.5"
 gunicorn = "^20.1.0"
+psycopg2 = "^2.9.5"
 
 
 [build-system]
