--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,9 @@ python = "^3.9"
 django = "^4.1.5"
 djangorestframework = "^3.14.0"
 python-decouple = "^3.7"
-psycopg2-binary = "^2.9.5"
 gunicorn = "^20.1.0"
 psycopg2 = "^2.9.5"
+whitenoise = "^6.3.0"
 
 
 [build-system]
